--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "atropos": "^2.0.2",
     "bootstrap": "^5.2.3",
     "gsap": "^3.11.5",
     "react": "^18.2.0",
